--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,15 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:host="splash" android:scheme="cundong" />
+            </intent-filter>
         </activity>
+        <activity android:name="com.debugapplication.TmpActivity" />
     </application>
-
+    <uses-permission
+        android:name="com.tencent.mm.permission.GET_QRCODE_INFO"/>
 </manifest>
