--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ssicosm.slime_great_war">
-
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:name="com.debugapplication.ListenerApplication"
@@ -11,14 +11,17 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name="com.unity3d.player.UnityPlayerActivity" android:screenOrientation="landscape" android:theme="@android:style/Theme.NoDisplay" >
+
+        </activity>
+        <activity android:name="com.debugapplication.TmpActivity" />
+        <activity android:name="com.debugapplication.WebActivity" android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-                <data android:host="UnityPlayerActivity" android:scheme="com.unity3d.player"/>
+                <!--<data android:host="UnityPlayerActivity" android:scheme="com.unity3d.player"/>-->
             </intent-filter>
         </activity>
-        <activity android:name="com.debugapplication.TmpActivity" />
     </application>
     <uses-permission
         android:name="com.tencent.mm.permission.GET_QRCODE_INFO"/>
