--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,19 +8,23 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.unity3d.player.UnityPlayerActivity" android:screenOrientation="landscape" android:theme="@android:style/Theme.NoDisplay" >
-
-        </activity>
-        <activity android:name="com.debugapplication.TmpActivity" />
-        <activity android:name="com.debugapplication.WebActivity" android:screenOrientation="portrait" >
+        <activity android:name="com.unity3d.player.UnityPlayerActivity" android:screenOrientation="landscape"  >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
                 <!--<data android:host="UnityPlayerActivity" android:scheme="com.unity3d.player"/>-->
             </intent-filter>
+        </activity>
+        <activity android:name="com.debugapplication.TmpActivity" />
+        <activity android:name="com.debugapplication.WebActivity" android:screenOrientation="portrait" >
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
+
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+                <!--&lt;!&ndash;<data android:host="UnityPlayerActivity" android:scheme="com.unity3d.player"/>&ndash;&gt;-->
+            <!--</intent-filter>-->
         </activity>
     </application>
     <uses-permission
