--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/AppTheme">
-        <activity android:name="com.unity3d.player.UnityPlayerActivity" android:screenOrientation="landscape"  >
+        <activity android:name="com.unity3d.player.UnityPlayerActivity" android:screenOrientation="portrait"  >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,7 +19,7 @@
             </intent-filter>
         </activity>
         <activity android:name="com.debugapplication.TmpActivity" />
-        <activity android:name="com.debugapplication.WebActivity" android:screenOrientation="portrait" />
+        <activity android:name="com.debugapplication.WebActivity" android:screenOrientation="portrait" android:theme="@android:style/Theme.NoTitleBar.Fullscreen"/>
             <!--<intent-filter>-->
                 <!--<action android:name="android.intent.action.MAIN" />-->
 
