--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,5 @@ dependencies {
     compile 'com.android.support:support-v4:22.+'
     compile 'net.lingala.zip4j:zip4j:1.3.2'
     compile 'com.tencent.bugly:crashreport:latest.release'
+//    compile 'com.tencent.bugly:nativecrashreport:latest.release'
 }
-//com.google.android.gms.games.internal.PopupManager::zzw
