--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,13 @@ android {
         exclude 'META-INF/notice.txt'
     }
     buildTypes {
+        debug {
+            applicationIdSuffix ".dm"
+        }
+
         release {
+            zipAlignEnabled true
+            shrinkResources false
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
