--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,5 +39,6 @@ dependencies {
     compile 'com.android.support:support-v4:22.+'
     compile 'net.lingala.zip4j:zip4j:1.3.2'
     compile 'com.tencent.bugly:crashreport:latest.release'
+    compile 'cn.pedant.sweetalert:library:1.3'
 //    compile 'com.tencent.bugly:nativecrashreport:latest.release'
 }
