--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"></uses-permission>
 
     <application
+        android:debuggable="true"
         android:largeHeap="true"
         android:allowBackup="true"
         android:name="com.debugapplication.ListenerApplication"
@@ -21,12 +22,7 @@
         >
         <activity android:name="com.unity3d.player.UnityPlayerActivity" android:screenOrientation="landscape"  >
 
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-                <!--<data android:host="UnityPlayerActivity" android:scheme="com.unity3d.player"/>-->
-            </intent-filter>
         </activity>
         <activity android:name="com.debugapplication.WebActivity" android:screenOrientation="portrait" android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
             <!--<intent-filter>-->
@@ -46,7 +42,12 @@
             <!--</intent-filter>-->
         </activity>
         <activity android:name="com.debugapplication.SplashActivity" android:screenOrientation="landscape" android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+                <!--<data android:host="UnityPlayerActivity" android:scheme="com.unity3d.player"/>-->
+            </intent-filter>
         </activity>
     </application>
     <uses-permission
