--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "25.0.3"
     defaultConfig {
         applicationId "com.debugapplication"
-        minSdkVersion 18
+        minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
@@ -38,7 +38,7 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:support-v4:22.+'
     compile 'net.lingala.zip4j:zip4j:1.3.2'
-    compile 'com.tencent.bugly:crashreport:latest.release'
+//    compile 'com.tencent.bugly:crashreport:latest.release'
     compile 'cn.pedant.sweetalert:library:1.3'
 //    compile 'com.tencent.bugly:nativecrashreport:latest.release'
 }
