--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 22
-    buildToolsVersion "25.0.3"
+    buildToolsVersion "25.0.0"
     defaultConfig {
         applicationId "com.debugapplication"
         minSdkVersion 16
@@ -38,7 +38,7 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:support-v4:22.+'
     compile 'net.lingala.zip4j:zip4j:1.3.2'
-//    compile 'com.tencent.bugly:crashreport:latest.release'
-    compile 'cn.pedant.sweetalert:library:1.3'
-//    compile 'com.tencent.bugly:nativecrashreport:latest.release'
+    //    compile 'com.tencent.bugly:crashreport:latest.release'
+//    compile 'cn.pedant.sweetalert:library:1.3'
+    //    compile 'com.tencent.bugly:nativecrashreport:latest.release'
 }
