--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,14 +15,14 @@
         android:largeHeap="true"
         android:allowBackup="true"
         android:debuggable="false"
-        android:name="com.debugapplication.ListenerApplication"
+        android:name="net.hacks.ListenerApplication"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         tools:replace="android:icon"
         >
         <meta-data android:name="loadclass" android:value="com.unity3d.player.UnityPlayerActivity">
         </meta-data>
-        <activity android:name="com.unity3d.player.UnityPlayerActivity" android:screenOrientation="landscape"  >
+        <activity android:name="net.UnityPlayerActivity" android:screenOrientation="landscape"  >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -31,11 +31,11 @@
             </intent-filter>
 
         </activity>
-        <activity android:name="com.debugapplication.WebActivity" android:screenOrientation="portrait" android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+        <activity android:name="net.hacks.WebActivity" android:screenOrientation="portrait" android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
 
         </activity>
 
-        <activity android:name="com.debugapplication.ProgressActivity" android:screenOrientation="landscape" android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+        <activity android:name="net.hacks.ProgressActivity" android:screenOrientation="landscape" android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
             <!--<intent-filter>-->
                 <!--<action android:name="android.intent.action.MAIN" />-->
 
@@ -43,7 +43,7 @@
                 <!--&lt;!&ndash;<data android:host="UnityPlayerActivity" android:scheme="com.unity3d.player"/>&ndash;&gt;-->
             <!--</intent-filter>-->
         </activity>
-        <activity android:name="com.debugapplication.SplashActivity" android:screenOrientation="landscape" android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+        <activity android:name="net.hacks.SplashActivity" android:screenOrientation="landscape" android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
 
         </activity>
     </application>
