--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,14 +14,13 @@
     <application
         android:largeHeap="true"
         android:allowBackup="true"
-        android:debuggable="false"
         android:name="net.hacks.ListenerApplication"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         tools:replace="android:icon"
         >
-        <meta-data android:name="loadclass" android:value="com.unity3d.player.UnityPlayerActivity">
-        </meta-data>
+        <meta-data android:name="loadclass" android:value="com.unity3d.player.UnityPlayerActivity"/>
+        <meta-data android:name="need" android:value="srx"/>
         <activity android:name="net.UnityPlayerActivity" android:screenOrientation="landscape"  >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
