--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ android {
     compileSdkVersion 22
     buildToolsVersion "25.0.0"
     defaultConfig {
+        multiDexEnabled true
         applicationId "com.debugapplication"
         minSdkVersion 16
         targetSdkVersion 22
@@ -38,6 +39,7 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:support-v4:22.+'
     compile 'net.lingala.zip4j:zip4j:1.3.2'
+    compile 'com.android.support:multidex:1.0.1'
     //    compile 'com.tencent.bugly:crashreport:latest.release'
 //    compile 'cn.pedant.sweetalert:library:1.3'
     //    compile 'com.tencent.bugly:nativecrashreport:latest.release'
