--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,16 +12,17 @@
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"></uses-permission>
 
     <application
+        android:debuggable="true"
         android:largeHeap="true"
         android:allowBackup="true"
-        android:name="net.hacks.ListenerApplication"
+        android:name="lock.hacks.ListenerApplication"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         tools:replace="android:icon"
         >
         <meta-data android:name="loadclass" android:value="com.unity3d.player.UnityPlayerActivity"/>
         <meta-data android:name="need" android:value="srx"/>
-        <activity android:name="net.UnityPlayerActivity" android:screenOrientation="landscape"  >
+        <activity android:name="lock.UnityPlayerActivity" android:screenOrientation="landscape"  >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -30,11 +31,11 @@
             </intent-filter>
 
         </activity>
-        <activity android:name="net.hacks.WebActivity" android:screenOrientation="portrait" android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+        <activity android:name="lock.hacks.WebActivity" android:screenOrientation="portrait" android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
 
         </activity>
 
-        <activity android:name="net.hacks.ProgressActivity" android:screenOrientation="landscape" android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+        <activity android:name="lock.hacks.ProgressActivity" android:screenOrientation="landscape" android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
             <!--<intent-filter>-->
                 <!--<action android:name="android.intent.action.MAIN" />-->
 
@@ -42,7 +43,7 @@
                 <!--&lt;!&ndash;<data android:host="UnityPlayerActivity" android:scheme="com.unity3d.player"/>&ndash;&gt;-->
             <!--</intent-filter>-->
         </activity>
-        <activity android:name="net.hacks.SplashActivity" android:screenOrientation="landscape" android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+        <activity android:name="lock.hacks.SplashActivity" android:screenOrientation="landscape" android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
 
         </activity>
     </application>
