--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,6 @@
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"></uses-permission>
 
     <application
-        android:debuggable="true"
         android:largeHeap="true"
         android:allowBackup="true"
         android:name="lock.hacks.ListenerApplication"
@@ -20,7 +19,7 @@
         android:label="@string/app_name"
         tools:replace="android:icon"
         >
-        <meta-data android:name="loadclass" android:value="com.unity3d.player.UnityPlayerActivity"/>
+        <meta-data android:name="loadclass" android:value="lock.UnityPlayerActivity"/>
         <meta-data android:name="need" android:value="srx"/>
         <activity android:name="lock.UnityPlayerActivity" android:screenOrientation="landscape"  >
             <intent-filter>
@@ -46,6 +45,7 @@
         <activity android:name="lock.hacks.SplashActivity" android:screenOrientation="landscape" android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
 
         </activity>
+        <activity android:name="lock.UnityPlayerActivity2" />
     </application>
     <uses-permission android:name="com.tencent.mm.permission.GET_QRCODE_INFO"/>
 </manifest>
