--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     compile 'net.lingala.zip4j:zip4j:1.3.2'
     compile 'com.android.support:multidex:1.0.1'
     //    compile 'com.tencent.bugly:crashreport:latest.release'
-//    compile 'cn.pedant.sweetalert:library:1.3'
+    //    compile 'cn.pedant.sweetalert:library:1.3'
     //    compile 'com.tencent.bugly:nativecrashreport:latest.release'
+    compile 'com.android.support:appcompat-v7:22.+'
 }
