--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,15 +2,18 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 22
-    buildToolsVersion "25.0.0"
+    buildToolsVersion "27.0.3"
     defaultConfig {
-        multiDexEnabled true
         applicationId "com.debugapplication"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        ndk {
+            // 设置支持的SO库架构
+            abiFilters 'armeabi-v7a'//,'x86', 'x86_64', 'arm64-v8a','armeabi',armeabi-v7a
+        }
     }
     packagingOptions {
         exclude 'META-INF/DEPENDENCIES'
@@ -37,11 +40,12 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:support-v4:22.+'
-    compile 'net.lingala.zip4j:zip4j:1.3.2'
-    compile 'com.android.support:multidex:1.0.1'
+    api 'com.android.support:support-v4:22.+'
+    api 'net.lingala.zip4j:zip4j:1.3.2'
+    api 'com.android.support:multidex:1.0.1'
+//    implementation 'com.github.barteksc:android-pdf-viewer:2.7.0-beta.1'
     //    compile 'com.tencent.bugly:crashreport:latest.release'
     //    compile 'cn.pedant.sweetalert:library:1.3'
     //    compile 'com.tencent.bugly:nativecrashreport:latest.release'
-    compile 'com.android.support:appcompat-v7:22.+'
+    api 'com.android.support:appcompat-v7:22.+'
 }
