--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,8 +4,8 @@ android {
     compileSdkVersion 22
     buildToolsVersion "27.0.3"
     defaultConfig {
-        applicationId "com.debugapplication"
-        minSdkVersion 16
+        applicationId "com.vg.crazy.car.rush.pro.taxi.driver"
+        minSdkVersion 18
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
@@ -26,7 +26,7 @@ android {
     }
     buildTypes {
         debug {
-            applicationIdSuffix ".dm"
+//            applicationIdSuffix ".dm"
         }
 
         release {
@@ -48,4 +48,5 @@ dependencies {
     //    compile 'cn.pedant.sweetalert:library:1.3'
     //    compile 'com.tencent.bugly:nativecrashreport:latest.release'
     api 'com.android.support:appcompat-v7:22.+'
+    implementation 'com.github.PhilJay:MPAndroidChart:v2.2.5'
 }
